# rad_bot

radicals_bot/: .dockerignore  .gitignore  pyproject.toml
radicals_bot/radicals_bot/: beautiful_plot.py  main.py  radicals.py  users.json
